# kytea-grpc

./: CMakeLists.txt
cmake/: FindKytea.cmake
protobuf/: kytea-svc.proto  kytea.proto
src/: kytea-grpc.cpp
